# parser

./: README.md  pyproject.toml  requirements.txt
output/: 1_20260224T160651Z.json  moskva_20260224T104352Z.json  moskva_20260224T114917Z.json  moskva_20260225T053021Z.json  orchestrator_jobs.sqlite
src/openinflation_parser/: __init__.py  orchestrator.py
src/openinflation_parser/orchestration/: __init__.py  cli.py  job_store.py  models.py  requests.py  server.py  utils.py  worker.py
src/openinflation_parser/parsers/: __init__.py  adapters.py  base.py  fixprice.py  fixprice_mapper.py  fixprice_parser.py  model_builder.py  runtime.py
src/openinflation_parser/parsers/chizhik/: __init__.py  mapper.py  parser.py  types.py
src/openinflation_parser/parsers/fixprice/: __init__.py  mapper.py  parser.py  types.py
src/openinflation_parser/parsers/perekrestok/: __init__.py  catalog.py  geolocation.py  mapper.py  parser.py  types.py
tests/: test_chizhik_mapper.py  test_chizhik_parser.py  test_fixprice_mapper.py  test_fixprice_query_planning.py  test_orchestration_requests.py  test_orchestrator_utils.py  test_perekrestok_catalog.py  test_perekrestok_mapper.py
